# school

./: .gitmodules  README.md
aisd/: .gitignore  Szablon Deklaracji 2025.rtf
algebra/: elimicacjaGaba  elimicacjaGaba.cpp  eliminacja.py  notatki.md  notatki_abstrakcyjne.md  sprawdzenie.py  zad6Lista7.py
algorytmikaPraktyczna/: a.in  cpp  cpp.cpp  py.py
analizaNumeryczna/: wyklad3.md
ask/: zad1  zad1.c  zad2  zad2.c  zad5.md  zad6.c
metodyProgramowania/: przydatne.txt
modeleJezykowe/llm_zip/: .gitignore  README.md  pyproject.toml
modeleJezykowe/llm_zip/notebooks/: data_generation.ipynb
modeleJezykowe/llm_zip/src/llm_zip/: __init__.py  cli.py  core.py
modeleJezykowe/llm_zip/src/llm_zip/coders/: __init__.py  decoder.py  encoder.py
modeleJezykowe/llm_zip/src/llm_zip/fs/: __init__.py  bitSet.py  fileEntry.py  fileReader.py  fileWriter.py
modeleJezykowe/llm_zip/src/llm_zip/models/: loader.py  model.py
modeleJezykowe/llm_zip/src/llm_zip/utils/: __init__.py  alpha.py  beta.py  bitSet.py  dataLoader.py  gamma.py
rust/proj2/: Cargo.toml  README.md
rust/proj2/interpreter/: Cargo.toml
rust/proj2/interpreter/src/: env.rs  interpreter.rs  lib.rs
rust/proj2/lexer/: Cargo.toml
rust/proj2/lexer/src/: lexer.rs  lib.rs  token.rs
rust/proj2/parser/: Cargo.toml
rust/proj2/parser/src/: grammar.rs  lib.rs  pc_parser.rs  rd_parser.rs
rust/proj2/src/: lib.rs  main.rs
rust/proj2/test/: test1.in  test2.in  test3.in  test4.in  test5.in  test6.in
rust/proj2/turtlelib/: Cargo.toml
rust/proj2/turtlelib/src/: color.rs  lib.rs  pen.rs  turtle.rs  window.rs
(+2270 files in other folders)
