[project]
name = "llm_zip"
version = "0.1.0"
description = ""
authors = [
    {name = "hinski2",email = "kubailinski2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets (>=4.4.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

[tool.poetry.scripts]
llm_zip = "llm_zip.cli:zip"
llm_unzip = "llm_zip.cli:unzip"